--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(helloworld helloworld.cpp)
-#target_link_libraries(helloworld my_fancy_library)
+add_executable(sumMultiples sumMultiples.cpp)
+#target_link_libraries(sumMultiples my_fancy_library)
 
 add_executable(tests tests.cpp)
 target_link_libraries(tests m)
